--- a/.config/dependencies-android-common.toml
+++ b/.config/dependencies-android-common.toml
@@ -8,14 +8,16 @@ google-billing = "7.0.0"
 # plugin
 # https://maven.google.com/web/index.html?q=build#com.android.tools.build:gradle
 android-plugin = "8.5.0"
-android-tools-common = "31.5.0"
-spotless = "6.25.0"
+android-tools-common = "31.5.1"
+google-services = "4.4.2"
+# https://github.com/diffplug/spotless/blob/main/plugin-gradle/CHANGES.md
+spotless = "7.0.0.BETA1"
 # androidx
 androidx-appcompat = "1.7.0"
-androidx-annotation = "1.8.0"
-androidx-lifecycle-common = "2.8.2"
+androidx-annotation = "1.8.1"
+androidx-lifecycle-common = "2.8.3"
 androidx-core = "1.13.1"
-androidx-collection = "1.4.0"
+androidx-collection = "1.4.1"
 androidx-fragment = "1.8.1"
 androidx-room = "2.6.1"
 androidx-hilt-compose = "1.2.0"
@@ -34,6 +36,13 @@ androidx-legacy-support-core-utils = "1.0.0"
 androidx-sqlite = "2.4.0"
 androidx-activity-compose = "1.9.0"
 exoplayer = "2.19.1"
+# firebase
+firebase-analytics = "22.0.1"
+firebase-messaging = "24.0.0"
+auto-service = "1.0.1"
+# appsflyer
+appsflyer-core = "6.9.0"
+appsflyer-google-referrer = "2.2"
 # ui
 androidx-constraintlayout = "2.1.4"
 material = "1.12.0"
@@ -41,12 +50,12 @@ material = "1.12.0"
 hilt = "2.43.2"
 # test
 junit = "4.13.2"
-androidx-test-core = "1.5.0"
-androidx-test-runner = "1.5.2"
-androidx-test-rules = "1.5.0"
-androidx-test-orchestrator = "1.4.2"
-androidx-test-ext = "1.1.5"
-androidx-test-espresso = "3.5.1"
+androidx-test-core = "1.6.1"
+androidx-test-runner = "1.6.1"
+androidx-test-rules = "1.6.1"
+androidx-test-orchestrator = "1.5.0"
+androidx-test-ext = "1.2.1"
+androidx-test-espresso = "3.6.1"
 truth = "1.1.3"
 # third party
 mmkv = "1.2.14"
@@ -54,21 +63,25 @@ hilt-compose-navigation-factory = "1.2.0"
 coil = "2.6.0"
 guava = "31.1-android"
 fastjson = "1.2.83"
-commons-io = "2.13.0"
+commons-io = "2.15.1"
 okhttp = "4.10.0"
 
 [libraries]
 # androidx
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "androidx-appcompat" }
+androidx-lifecycle-runtime = { module = "androidx.lifecycle:lifecycle-runtime", version.ref = "androidx-lifecycle-common" }
 androidx-lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "androidx-lifecycle-common" }
 androidx-lifecycle-livedata-ktx = { module = "androidx.lifecycle:lifecycle-livedata-ktx", version.ref = "androidx-lifecycle-common" }
+androidx-lifecycle-viewmodel = { module = "androidx.lifecycle:lifecycle-viewmodel", version.ref = "androidx-lifecycle-common" }
 androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "androidx-lifecycle-common" }
+androidx-lifecycle-viewmodel-savedstate = { module = "androidx.lifecycle:lifecycle-viewmodel-savedstate", version.ref = "androidx-lifecycle-common" }
 androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "androidx-lifecycle-common" }
 androidx-lifecycle-reactivestreams-ktx = { module = "androidx.lifecycle:lifecycle-reactivestreams-ktx", version.ref = "androidx-lifecycle-common" }
 androidx-lifecycle-service = { module = "androidx.lifecycle:lifecycle-service", version.ref = "androidx-lifecycle-common" }
 androidx-lifecycle-process = { module = "androidx.lifecycle:lifecycle-process", version.ref = "androidx-lifecycle-common" }
 androidx-annotation = { module = "androidx.annotation:annotation", version.ref = "androidx-annotation" }
 androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "androidx-core" }
+androidx-collection = { module = "androidx.collection:collection", version.ref = "androidx-collection" }
 androidx-collection-ktx = { module = "androidx.collection:collection-ktx", version.ref = "androidx-collection" }
 androidx-fragment-ktx = { module = "androidx.fragment:fragment-ktx", version.ref = "androidx-fragment" }
 androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "androidx-room" }
@@ -91,6 +104,9 @@ androidx-localbroadcastmanager = { module = "androidx.localbroadcastmanager:loca
 androidx-legacy-support-core-utils = { module = "androidx.legacy:legacy-support-core-utils", version.ref = "androidx-legacy-support-core-utils" }
 androidx-sqlite = { module = "androidx.sqlite:sqlite", version.ref = "androidx-sqlite" }
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activity-compose" }
+# Firebase
+firebase-analytics = { module = "com.google.firebase:firebase-analytics", version.ref = "firebase-analytics" }
+firebase-messaging = { module = "com.google.firebase:firebase-messaging", version.ref = "firebase-messaging" }
 # ExoPlayer
 exoplayer-core = { module = "com.google.android.exoplayer:exoplayer-core", version.ref = "exoplayer" }
 exoplayer-ui = { module = "com.google.android.exoplayer:exoplayer-ui", version.ref = "exoplayer" }
@@ -106,6 +122,7 @@ plugin-source-android = { module = "com.android.tools.build:gradle", version.ref
 plugin-source-android-common = { module = "com.android.tools:common", version.ref = "android-tools-common" }
 plugin-source-android-ddmlib = { module = "com.android.tools.ddms:ddmlib", version.ref = "android-tools-common" }
 plugin-source-spotless = { module = "com.diffplug.spotless:spotless-plugin-gradle", version.ref = "spotless" }
+auto-service = { module = "com.google.auto.service:auto-service", version.ref = "auto-service" }
 # hilt
 hilt-runtime = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
 hilt-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hilt" }
@@ -131,14 +148,17 @@ coil = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
 guava = { module = "com.google.guava:guava", version.ref = "guava" }
 fastjson = { module = "com.alibaba:fastjson", version.ref = "fastjson" }
 commons-io = { module = "commons-io:commons-io", version.ref = "commons-io" }
+# appsflyer
+appsflyer-core = { module = "com.appsflyer:af-android-sdk", version.ref = "appsflyer-core" }
+appsflyer-google-referrer = { module = "com.android.installreferrer:installreferrer", version.ref = "appsflyer-google-referrer" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "android-plugin" }
 android-library = { id = "com.android.library", version.ref = "android-plugin" }
 java-library = { id = "org.gradle.java-library" }
 spotless = { id = "com.diffplug.spotless", version.ref = "spotless" }
-dependencies-update = { id = "com.github.ben-manes.versions", version = "dependencies-update" }
 hilt-android = { id = "dagger.hilt.android.plugin", version.ref = "hilt" }
+google-services = { id = "com.google.gms.google-services", version.ref = "google-services" }
 
 [bundles]
 hilt-navigation = ["hilt-navigation-compose", "hilt-compose-navigation-factory"]
