--- a/gradle.properties
+++ b/gradle.properties
@@ -16,6 +16,7 @@ ksp.useKSP2=false
 kotlin.build.report.file.output_dir=kotlin-reports
 kotlin.mpp.keepMppDependenciesIntactInPoms=false
 kotlin.internal.mpp.createDefaultMultiplatformPublications=true
+systemProp.https.protocols=TLSv1.1,TLSv1.2
 #Compose
 org.jetbrains.compose.experimental.uikit.enabled=true
 org.jetbrains.compose.experimental.jscanvas.enabled=true
